<resources>
    <string name="app_name">catalagoCarros</string>
    <string name="action_settings">Settings</string>
    <string name="placa">Placa</string>
    <string name="titulo_agregar">Agregar carro</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="registrar">Registrar</string>
    <string name="limpiar">Limpiar</string>
    <string name="audi" translatable="false">Audi</string>
    <string name="bmw" translatable="false">Bmw</string>
    <string name="buggati" translatable="false">Buggati</string>
    <string name="ferrari" translatable="false">Ferrari</string>
    <string name="nissan" translatable="false">Nissan</string>
    <string name="amarillo">Amarillo</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="mensaje_guardado">Registro guardado</string>
    <string name="precio">Precio</string>
    <string name="campoVacio">El campo no puede ser vacio</string>
    <string name="placaCaracteresIni">Los tres primeros caracteres de la placa deben ser letras</string>
    <string name="placaCaracteresfin">Los tres ultimos caracteres deben ser numeros</string>
    <string name="placaNumCaracteres">La placa debe tener 6 caracteres</string>


    <string-array name="arrayModelo">
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
    </string-array>
    <string-array name="arrayColor">
        <item>@string/amarillo</item>
        <item>@string/rojo</item>
        <item>@string/azul</item>
    </string-array>
    <string-array name="arrayMarca">
        <item>@string/audi</item>
        <item>@string/bmw</item>
        <item>@string/buggati</item>
        <item>@string/ferrari</item>
        <item>@string/nissan</item>
    </string-array>
</resources>
